// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button correctly 1`] = `
<div>
  <button
    class="rounded-md bg-blue-700 hover:bg-blue-600 active:bg-blue-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 transition-all"
  >
    Button
  </button>
</div>
`;

exports[`Button renders Link correctly 1`] = `
<div>
  <a
    class="rounded-md bg-blue-700 hover:bg-blue-600 active:bg-blue-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 transition-all"
    href="/"
  >
    Button Link
  </a>
</div>
`;
